--- a/code/src/main/resources/local.properties
+++ b/code/src/main/resources/local.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/imdb?createDatabaseIfNotExist=true
+db.url=jdbc:mysql://localhost/bookstore?createDatabaseIfNotExist=true
 db.username=root
 db.password=P@ssw0rd
 hibernate.hbm2ddl.auto=none
