--- a/code/src/main/resources/local.properties
+++ b/code/src/main/resources/local.properties
@@ -2,7 +2,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost/bookstore?createDatabaseIfNotExist=true
 db.username=root
-db.password=P@ssw0rd
+db.password=root
 hibernate.hbm2ddl.auto=none
 hibernate.show_sql=true
 hibernate.format_sql=true
