--- a/code/src/main/webapp/WEB-INF/web.xml
+++ b/code/src/main/webapp/WEB-INF/web.xml
@@ -3,18 +3,32 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-		<!-- for spring security -->
-				
-		<filter>
-			<filter-name>springSecurityFilterChain</filter-name>
-			<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		</filter>
-			<filter-mapping>
-				<filter-name>springSecurityFilterChain</filter-name>
-				<url-pattern>/*</url-pattern>
-			</filter-mapping>
-	
-	
+	<!-- for spring security -->
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
+
+	<error-page>
+		<error-code>400</error-code>
+		<location>/exception/400</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/exception/500</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/exception/404</location>
+	</error-page>
 	<!-- The definition of the Root Spring Container shared by all Servlets 
 		and Filters -->
 	<context-param>
